wrap project breadcrumbs in the header, fixes #34

--- a/src/sass/components/_top.scss
+++ b/src/sass/components/_top.scss
@@ -155,13 +155,22 @@
             }
         }
 
-        > .root {
+        .root {
             color: $header-root;
             font-weight: 500;
         }
 
-        > .ancestor {
+        .ancestor {
             font-weight: 500;
+        }
+
+        .root,
+        .ancestor {
+            display: inline-block;
+        }
+
+        .current-project {
+            display: inline-block;
         }
     }
 
